# obserbot_gui

./: .gitignore  CMakeLists.txt  dashboard_tab.cpp  dashboard_tab.h  mainwindow.cpp  mainwindow.h  motor_tab.cpp  motor_tab.h  sensor_tab.cpp  sensor_tab.h
config/: motor_info.json
dashboard/: camera_widget.cpp  camera_widget.h  control_widget.cpp  control_widget.h  dashboard_tab.cpp  dashboard_tab.h  motor_status_box.cpp  motor_status_box.h  motor_widget.cpp  motor_widget.h  scenario_widget.cpp  scenario_widget.h
motor/: motor_angle_viewer.h  motor_select_box.cpp  motor_select_box.h  motor_select_widget.cpp  motor_select_widget.h  motor_tab.cpp  motor_tab.h  move_widget.cpp  move_widget.h
